Add slog admin page. Error handling if the wittisms.xml file is missing. Finish the repeater functionality for slog.

--- a/longueur/Admin/admin.master
+++ b/longueur/Admin/admin.master
@@ -11,7 +11,7 @@
 <body>
     <form id="form1" runat="server">
     <div id="nav">
-		<a href="errors.aspx">Errors</a> | <a href="downloads.aspx">Downloads</a>
+		<a href="errors.aspx">Errors</a> | <a href="downloads.aspx">Downloads</a> | <a href="slog.aspx">Slog</a>
 	</div>
 	<br />
 	
