--- a/longueur/Slog/slog.master
+++ b/longueur/Slog/slog.master
@@ -1,5 +1,4 @@
 <%@ Master Language="C#" AutoEventWireup="true" CodeFile="slog.master.cs" Inherits="Slog_Default" %>
-
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
 <html xmlns="http://www.w3.org/1999/xhtml" >
@@ -43,10 +42,10 @@
 	</script>
 </head>
 <body onload="onLoad()" onresize="onLoad()">
-    <form id="form1" runat="server">
+    <form id="form" runat="server">
     <div id="left">
 		<div id="breadcrumb">
-			... breadcrumb.
+			longueur.org -> slog
 		</div>
 			    
 		<div id="posts">
