--- a/longueur/Slog/styles.css
+++ b/longueur/Slog/styles.css
@@ -1,7 +1,7 @@
 ﻿body {
 	margin:0px;
 	padding:0px;
-	font-family:verdana, arial, helvetica, sans-serif;
+	font: 11px/12px Verdana, Arial, Helvetica, sans-serif; 
 	color:#333;
 	background-color:white;
 	}
@@ -57,6 +57,7 @@ body>#left {width:420px;
 #breadcrumb 
 {
 	margin: 0px 0px 5px 0px;
+	padding: 0px 0px 0px 2px;
 	background-color:#eee;
 	border:1px solid #999;
 	line-height:17px;
@@ -64,6 +65,7 @@ body>#left {width:420px;
 
 #posts 
 {
+	padding: 0px 0px 0px 2px;
 	margin: 0px 0 px 0px 0px;
 	background-color:#eee;
 	border:1px solid #999;
