Update slog so that there is no image. Updated todo.

--- a/longueur/Slog/slog.master
+++ b/longueur/Slog/slog.master
@@ -53,7 +53,7 @@
 		</div>
     </div>
     <div id="right">
-		<img src="images/button.gif" id="bottomRightImage" />
+		<!-- <img src="images/button.gif" id="bottomRightImage" /> -->
     </div>
     </form>
 </body>
