--- a/longueur/Admin/admin.master
+++ b/longueur/Admin/admin.master
@@ -11,6 +11,7 @@
 <body>
     <form id="form1" runat="server">
     <div id="nav">
+		<a href="Default.aspx">Home</a> | 
 		<a href="errors.aspx">Errors</a> | 
 		<a href="downloads.aspx">Downloads</a> | 
 		<a href="slog.aspx">Slog</a> |
