Fixed some more namespace issues. Used UserName instead of UserId to specify the content to pull. Will make it easier to switch between dev/live databases. Lock some portions of the SQL class so we don't get the weird intermittent issues when hitting the site quickly.

--- a/longueur/TheHillellis/styles.css
+++ b/longueur/TheHillellis/styles.css
@@ -1,7 +1,7 @@
 ﻿body {
 	margin:0px;
 	padding:0px;
-	font: 11px/12px Verdana, Arial, Helvetica, sans-serif; 
+	font: 11px/12px Verdana, Arial, Helvetica, sans-serif;
 	color:#333;
 	background-color:white;
 	}
@@ -86,4 +86,8 @@ body {
 	background-color:#eee;
 	border:1px solid #999;
 	line-height:17px;
+}
+
+.title {
+	font-weight: bold;
 }
