--- a/longueur/Admin/admin.master
+++ b/longueur/Admin/admin.master
@@ -15,7 +15,7 @@
 		<a href="errors.aspx">Errors</a> | 
 		<a href="downloads.aspx">Downloads</a> | 
 		<a href="slog.aspx">Slog</a> |
-		<a href="TheHillellies">The Hillellies</a>
+		<a href="TheHillellies.aspx">The Hillellies</a>
 		<a href="users.aspx">Users</a>
 	</div>
 	<br />
