Ability to specify image for the blog titles.

--- a/longueur/TheHillellis/TheHillellis.master
+++ b/longueur/TheHillellis/TheHillellis.master
@@ -42,6 +42,9 @@
     <div id="content">
 		<div id="breadcrumb">
 			<a href="../">longueur.org</a> -> The Hillellies
+		</div>		
+		<div id="logo">
+			logo here...
 		</div>
 			    
 		<asp:contentplaceholder id="ContentPlaceHolder" runat="server" />
