--- a/longueur/TheHillellis/TheHillellis.master
+++ b/longueur/TheHillellis/TheHillellis.master
@@ -1,4 +1,4 @@
-<%@ Master Language="C#" AutoEventWireup="true" CodeFile="TheHillellis.master.cs" Inherits="TheHillellies_Default" %>
+<%@ Master Language="C#" AutoEventWireup="true" CodeFile="TheHillellis.master.cs" Inherits="TheHillellis_Default" %>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
 <html xmlns="http://www.w3.org/1999/xhtml" >
@@ -15,8 +15,8 @@
 			getSize();
 
 			// Resize the contents stuff.
-			document.getElementById('rightContent').style.height = height - 21 + 'px';
-			document.getElementById('leftContent').style.height = height - 21 + 'px';
+			document.getElementById('rightContent').style.height = height - 131 + 'px';
+			document.getElementById('leftContent').style.height = height - 131 + 'px';
 		}
 		
 		function getSize() {
@@ -36,15 +36,20 @@
 			}
 		}
 	</script>
+	<script src="http://www.google-analytics.com/urchin.js" type="text/javascript" />
+	<script type="text/javascript">
+		_uacct = "UA-247760-1";
+		urchinTracker();
+	</script>
 </head>
 <body onload="onLoad()" onresize="onLoad()">
     <form id="form" runat="server">
     <div id="content">
 		<div id="breadcrumb">
-			<a href="../">longueur.org</a> -> The Hillellies
+			<a href="../">longueur.org</a> -> The Hillellis
 		</div>		
 		<div id="logo">
-			logo here...
+			<img src="images/logo.png" alt="logo" title="Wherein we make fun of lots of random stuff." />
 		</div>
 			    
 		<asp:contentplaceholder id="ContentPlaceHolder" runat="server" />
