Update TheHillellis to have a contact box at the bottom of the page. Update the datetime when inserting values to update timezone. Add logout method to SiteUser. Beef up InsertErrorLog() method.

--- a/longueur/Admin/admin.master
+++ b/longueur/Admin/admin.master
@@ -17,6 +17,7 @@
 		<a href="slog.aspx">Slog</a> |
 		<a href="TheHillellis.aspx">The Hillellis</a> | 
 		<a href="users.aspx">Users</a>
+		<div style="text-align:right"><asp:LinkButton ID="lnkLogout" runat="server" Text="Logout!" /></div>
 	</div>
 	<br />
 	
