--- a/longueur/TheHillellis/TheHillellis.master
+++ b/longueur/TheHillellis/TheHillellis.master
@@ -5,63 +5,7 @@
 <head runat="server">
 	<title></title>
 	<style type="text/css" media="all">@import "styles.css";</style>
-    
-    <script type="text/javascript" language="javascript">
-		var height = 0;
-		var width = 0;
-		
-		function onLoad() 
-		{
-			var headerHeight = 130;
-			var footerHeight = 25;
-			
-			// Set our global vars.
-			getSize();
-
-			// Resize the contents stuff.
-			var contentHeight = (height - headerHeight - footerHeight) + 'px';
-			var contentWidth = (width - 300) + 'px';
-			var archiveWidth = (width - 305) + 'px';
-			var halfContentWidth = ((width - 321) /2) + 'px';
-			
-			var content = document.getElementById('content');
-			var rightContent = document.getElementById('rightContent');
-			var leftContent = document.getElementById('leftContent');
-			
-			// Increase the height.
-			rightContent.style.height = contentHeight;
-			leftContent.style.height = contentHeight;
-			
-			// Widen the content.
-			content.style.width = contentWidth;
-			rightContent.style.width = halfContentWidth;
-			leftContent.style.width = halfContentWidth;
-			
-			// Widen the footer.
-			var archives = document.getElementById('archives');
-			archives.style.zIndex = 0;
-			archives.style.width = archiveWidth;
-		}
-		
-		function getSize() {
-			// http://www.howtocreate.co.uk/tutorials/javascript/browserwindow
-			if (typeof(window.innerWidth) == 'number') {
-				//Non-IE
-				height = window.innerHeight - 15;
-				width = window.innerWidth - 15;
-			} else if (document.documentElement && 
-				(document.documentElement.clientWidth || document.documentElement.clientHeight)) {
-				//IE 6+ in 'standards compliant mode'
-				height = document.documentElement.clientHeight - 15;
-				width = document.documentElement.clientWidth - 15;
-			} else if (document.body && 
-				(document.body.clientWidth || document.body.clientHeight)) {
-				//IE 4 compatible
-				height = document.body.clientHeight - 35;
-				width = document.body.clientWidth - 35;
-			}
-		}
-	</script>
+    <script type="text/javascript" language="javascript" src="js/onload.js" />
 	<script src="http://www.google-analytics.com/urchin.js" type="text/javascript" />
 	<script type="text/javascript">
 		_uacct = "UA-247760-1";
@@ -87,6 +31,14 @@
 			</div>
 
 			No archives, yet.
+		</div>
+		<div id="contact">
+			<img src="../images/down_arrow.png" alt="" id="contactArrow" />
+			<div id="contactTitle">
+				Contact
+			</div>
+
+			thehillellis__AT__gmail__DOT__com
 		</div>
     </div>
     </form>
