--- a/longueur/TheHillellis/TheHillellis.master
+++ b/longueur/TheHillellis/TheHillellis.master
@@ -5,14 +5,14 @@
 <head runat="server">
 	<title></title>
 	<style type="text/css" media="all">@import "styles.css";</style>
-    <script type="text/javascript" language="javascript" src="js/onload.js" />
+    <script type="text/javascript" language="javascript" src="js/TheHillellis.js" />
 	<script src="http://www.google-analytics.com/urchin.js" type="text/javascript" />
 	<script type="text/javascript">
 		_uacct = "UA-247760-1";
 		urchinTracker();
 	</script>
 </head>
-<body onload="onLoad()" onresize="onLoad()">
+<body>
     <form id="form" runat="server">
     <div id="content">
 		<div id="breadcrumb">
