--- a/longueur/TheHillellis/styles.css
+++ b/longueur/TheHillellis/styles.css
@@ -99,6 +99,19 @@ a:hover {
 	overflow-y: auto;
 }
 
+#archiveContent {
+	width: 795px;
+	padding: 2px;
+	margin: 0px;
+	float: left;
+	background-color: #99CCFF;
+	border: 1px solid #999;
+	line-height: 17px;
+	overflow: auto;
+	overflow-x: hidden;
+	overflow-y: auto;
+}
+
 #breadcrumb 
 {
 	margin: 0px 0px 5px 0px;
