--- a/longueur/TheHillellis/TheHillellis.master
+++ b/longueur/TheHillellis/TheHillellis.master
@@ -4,12 +4,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml" >
 <head runat="server">
 	<title></title>
-	<style type="text/css" media="all">@import "styles.css";</style>
+	<style type="text/css" media="all" id="styles" runat="server">@import "css/styles.css";</style>
     <script type="text/javascript" language="javascript" src="js/TheHillellis.js" />
 	<script src="http://www.google-analytics.com/urchin.js" type="text/javascript" />
 	<script type="text/javascript">
 		_uacct = "UA-247760-1";
-		urchinTracker();
+		//urchinTracker();
 	</script>
 </head>
 <body>
