--- a/longueur/TheHillellis/css/Themes/Spring.css
+++ b/longueur/TheHillellis/css/Themes/Spring.css
@@ -45,7 +45,7 @@ a:hover {
 }
 
 #logo {
-	background-color: #FFFFCC;
+	background: #FFFFCC url('../../images/logo.png') no-repeat center;
 }
 
 #rightArchives {
