--- a/longueur/TheHillellis/css/styles.css
+++ b/longueur/TheHillellis/css/styles.css
@@ -119,7 +119,7 @@ a:hover {
 #logo {
 	margin: 0px 0px 5px 0px;
 	padding: 0px 2px 0px 2px;
-	background-color: #FFFFCC;
+	background: #FFFFCC url('../images/logo.png') no-repeat center;
 	border: 1px solid #999;
 	text-align: center;
 }
