--- a/longueur/TheHillellis/css/Themes/Minimal.css
+++ b/longueur/TheHillellis/css/Themes/Minimal.css
@@ -48,6 +48,14 @@ a:hover {
 	background: #EEEEEE url('../../images/logo_minimal.png') repeat-x;
 }
 
+#tags {
+	background-color:#EEEEEE;
+}
+
+#recent {
+	background-color:#EEEEEE;
+}
+
 #rightArchives {
 	background-color:#EEEEEE;
 }
