--- a/longueur/TheHillellis/css/Themes/Minimal.css
+++ b/longueur/TheHillellis/css/Themes/Minimal.css
@@ -35,6 +35,10 @@ a:hover {
 	background-color: #EEEEEE;
 }
 
+#tagContent {
+	background-color: #EEEEEE;
+}
+
 #archiveContent {
 	background-color: #EEEEEE;
 }
