--- a/longueur/TheHillellis/css/Themes/Spring.css
+++ b/longueur/TheHillellis/css/Themes/Spring.css
@@ -35,6 +35,10 @@ a:hover {
 	background-color: #99CCFF;
 }
 
+#tagContent {
+	background-color: #99CCFF;
+}
+
 #archiveContent {
 	background-color: #99CCFF;
 }
