--- a/longueur/TheHillellis/css/styles.css
+++ b/longueur/TheHillellis/css/styles.css
@@ -69,8 +69,7 @@ a:hover {
 #rightContent {
 	width:389px;
 	padding:2px;
-	margin:0px;
-	float:right;
+	margin: 0px 0px 0px 5px;
 	border:1px solid #999999;
 	line-height:17px;
 	overflow:auto;
@@ -90,32 +89,33 @@ a:hover {
 	overflow-y: auto;
 }
 
-#tagContent {
-	width: 795px;
-	padding: 2px;
-	margin: 0px;
-	float: left;
-	border: 1px solid #999;
-	line-height: 17px;
-	overflow: auto;
-	overflow-x: hidden;
-	overflow-y: auto;
-}
-
-#archiveContent {
-	width: 795px;
-	padding: 2px;
-	margin: 0px;
-	float: left;
-	border: 1px solid #999;
-	line-height: 17px;
-	overflow: auto;
-	overflow-x: hidden;
-	overflow-y: auto;
-}
-
-#breadcrumb 
+#tagContent 
 {
+	width: 795px;
+	padding: 2px;
+	margin: 0px;
+	float: left;
+	border: 1px solid #999;
+	line-height: 17px;
+	overflow: auto;
+	overflow-x: hidden;
+	overflow-y: auto;
+}
+
+#archiveContent 
+{
+	width: 795px;
+	padding: 2px;
+	margin: 0px;
+	float: left;
+	border: 1px solid #999;
+	line-height: 17px;
+	overflow: auto;
+	overflow-x: hidden;
+	overflow-y: auto;
+}
+
+#breadcrumb {
 	margin: 0px 0px 5px 0px;
 	padding: 0px 2px 0px 2px;
 	border: 1px solid #999;
@@ -135,13 +135,11 @@ a:hover {
 	padding: 0px 2px 0px 2px;
 	border: 1px solid #999;
 	position: absolute;
-	overflow: auto;
-	overflow-x: hidden;
-	overflow-y: auto;
+	overflow: hidden;
 }
 
 #recent {
-	margin: 0px 0px 5px 0px;
+	margin: 0px 0px 5px 5px;
 	padding: 0px 2px 0px 2px;
 	border: 1px solid #999;
 	position: absolute;
