--- a/longueur/TheHillellis/TheHillellis.master
+++ b/longueur/TheHillellis/TheHillellis.master
@@ -36,7 +36,7 @@
 		            Recent entries:
 		        </HeaderTemplate>
 		        <ItemTemplate>
-		            <a href='Permalink.aspx?id=<%# DataBinder.Eval(Container.DataItem, "Id") %>'><%# DataBinder.Eval(Container.DataItem, "Title") %></a><%# getRecentDelimiter(Container) %>
+		            <a href='<%# DataBinder.Eval(Container.DataItem, "Id") %>.aspx'><%# DataBinder.Eval(Container.DataItem, "Title") %></a><%# getRecentDelimiter(Container) %>
 		        </ItemTemplate>
 		    </asp:Repeater>
 		</div>
