--- a/longueur/styles.css
+++ b/longueur/styles.css
@@ -1,5 +1,19 @@
-﻿body {
+﻿body 
+{
+	margin:0px;
+	padding:0px;
+	font: Verdana, Arial, Helvetica, sans-serif;
+	color:#333;
 }
+
+h1 {
+	margin:0px 0px 2px 0px;
+	padding:0px;
+	font-size: large;
+	font-weight:bold;
+	color:#000;
+	text-align: right;
+	}
 
 #container
 {
@@ -12,18 +26,23 @@
 #links
 {
 	width: 100px;
+	margin-top: 10px;
 }
 
 #description
 {
 	position: absolute;
 	width: 200px;
-	top: 65px;
+	top: 75px;
 	margin-left: 100px;
 }
 
 #title 
 {
-	height: 50px;
+	height: 40px;
 	font-weight: bold;
+	background-color: #000;
+	color: #FFF;
+	padding: 5px;
+	outline: #CCC solid 1px;
 }
